Wrap text correctly in community details popup

--- a/src/routes/CommunityDetail/CommunityDetail.scss
+++ b/src/routes/CommunityDetail/CommunityDetail.scss
@@ -47,6 +47,7 @@
 .communityDescription {
   color: $color-regent;
   font-size: 16px;
+  white-space: pre;
 }
 
 .communityTopics {
